--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **/data*/*
 **/temp/*
 **/logs/*
+**/experiments/*
 **/.idea/*
 *.dat
 *.edf
@@ -10,6 +11,7 @@
 *.xlsx
 *.pth
 *.pth.tar
+*.pickle
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
